src/objects/DSCORGPKG__DiscoverOrg_Update_History__c.object
<CustomObject>
    <fields>
        <fullName>DSCORGPKG__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DiscoverOrg Update History</relationshipLabel>
        <relationshipName>DiscoverOrg_Update_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DiscoverOrg Update History</relationshipLabel>
        <relationshipName>DiscoverOrg_Update_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__FieldName__c</fullName>
        <label>FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>DiscoverOrg Update History</relationshipLabel>
        <relationshipName>DiscoverOrg_Update_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DiscoverOrg Update History</label>
    <listViews>
        <fullName>DSCORGPKG__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Hist-{0000}</displayFormat>
        <label>DiscoverOrg Update History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DiscoverOrg Update History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>